// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticatedContainer rendering should render without error 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-list"
  >
    <h2>
      NoteBooks
    </h2>
    <div
      className="form fieldset new-book-form"
    >
      <form>
        <div
          className="form-group"
        >
          <input
            className="input-name"
            id="name"
            name="name"
            onChange={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            className="button"
            disabled={false}
            id="submit"
            name="submit"
            onClick={[Function]}
            type="submit"
            value="Submit"
          />
        </div>
      </form>
    </div>
    <div
      className="book-cards"
    />
  </div>
</div>
`;

exports[`AuthenticatedContainer with a currrentBook set should render the BookView 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-view-container"
  >
    <h2>
      Foo
    </h2>
    <div
      className="book-view"
    >
      <div
        className="note-list"
      >
        <div
          className="expander"
        >
          <button
            className="new-note-expander expander-trigger new-note-form-expander expander-hidden"
            onClick={[Function]}
          >
            + Add Note
          </button>
          <div
            className="form fieldset new-note-form expander-content"
          >
            <form>
              <div
                className="fieldset-wrapper"
              >
                <div
                  className="form-group"
                >
                  <input
                    className="input-name"
                    id="name"
                    name="name"
                    onChange={[Function]}
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group"
                >
                  <input
                    className="button"
                    disabled={false}
                    id="submit"
                    name="submit"
                    onClick={[Function]}
                    type="submit"
                    value="Submit"
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        className="note-editor"
      >
        <div
          className="editor-tools"
        >
          <div
            className="save-icon hidden"
          >
            <span
              aria-label="save-icon"
              role="img"
            >
              💾
            </span>
          </div>
        </div>
        <form>
          <textarea
            id="note-text"
            name="note-text"
            onChange={[Function]}
            value={undefined}
          />
        </form>
      </div>
      <div
        className="note-view"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`AuthenticatedContainer without a currrentBook set should render the BookList 1`] = `
<div
  className="authenticated-container"
>
  <nav
    className="nav"
  >
    <div
      className="logo"
    >
      NoteBook2
    </div>
  </nav>
  <div
    className="book-list"
  >
    <h2>
      NoteBooks
    </h2>
    <div
      className="form fieldset new-book-form"
    >
      <form>
        <div
          className="form-group"
        >
          <input
            className="input-name"
            id="name"
            name="name"
            onChange={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            className="button"
            disabled={false}
            id="submit"
            name="submit"
            onClick={[Function]}
            type="submit"
            value="Submit"
          />
        </div>
      </form>
    </div>
    <div
      className="book-cards"
    >
      <div
        className="book-listing"
        onClick={[Function]}
      >
        <div
          className="book-name"
        >
          Foo
        </div>
      </div>
    </div>
  </div>
</div>
`;
